--- a/app/src/main/res/layout/activity_store_item_form.xml
+++ b/app/src/main/res/layout/activity_store_item_form.xml
@@ -70,6 +70,19 @@
         app:layout_constraintTop_toBottomOf="@+id/itemDescriptionEditText" />
 
     <EditText
+        android:id="@+id/itemMRPEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Enter MRP"
+        android:inputType="number"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/itemPriceEditText" />
+
+    <EditText
         android:id="@+id/itemStockditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -80,7 +93,7 @@
         android:inputType="number"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/itemPriceEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/itemMRPEditText" />
 
     <Button
         android:id="@+id/itemPhotoButton"
