--- a/app/src/main/res/layout/activity_details_form.xml
+++ b/app/src/main/res/layout/activity_details_form.xml
@@ -46,7 +46,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Enter phone name"
-        android:inputType="textPersonName"
+        android:inputType="phone"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/storeNameEditText" />
@@ -59,7 +59,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Enter email ID"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phoneNumberEditText" />
